--- a/src/todo
+++ b/src/todo
@@ -1,7 +1,6 @@
 Version 1.0.9:
 - Refractoring of all enderchests managing system (Good!)
-- Possibility to create public enderchests
-- Possibility to disable on custom worlds (config file)
+- Possibility to disable on custom worlds (config file) (Good!)
 - Better config.yml file
 
 - Fix bug with saving system (enderchests not saved :[ )
