--- a/src/todo
+++ b/src/todo
@@ -1,6 +1,8 @@
-Version 1.0.9:
-- Refractoring of all enderchests managing system (Good!)
-- Possibility to disable on custom worlds (config file) (Good!)
-
-- Fix bug with saving system (enderchests not saved :[ ) (Good!)
-- Fix bug with offline enderchests (Good!)
+Version 1.0.9b:
+- Improvements of ItemSerializer
+- Fix saving system in a database
+- Mysql: support for item lores
+- Mysql: support for all characters
+- Store Map< uuid -> playername >
+- EnderchestsManager is now "case sensitive" for offline players
+- Now fully support multi-servers
