Improve configuration loading code - Move locale config file

--- a/src/main/resources/locales/en.yml
+++ b/src/main/resources/locales/en.yml
@@ -1,5 +1,5 @@
 # # # # # # # # # # # # # # # # # # # # # #
-#   EnderContainers default locale (EN)   #
+#   EnderContainers english locale        #
 #   Version: 2.2.0                        #
 #   An enderchests plugin by Utarwyn      #
 # # # # # # # # # # # # # # # # # # # # # #
