--- a/plugin/src/main/resources/locales/en.yml
+++ b/plugin/src/main/resources/locales/en.yml
@@ -1,6 +1,6 @@
 # # # # # # # # # # # # # # # # # # # # # #
 #   EnderContainers english locale        #
-#   Version: 2.2.1                        #
+#   Version: 2.3.0-dev                    #
 #   An enderchests plugin by Utarwyn      #
 # # # # # # # # # # # # # # # # # # # # # #
 
