--- a/plugin/src/main/resources/locales/zhCN.yml
+++ b/plugin/src/main/resources/locales/zhCN.yml
@@ -1,8 +1,8 @@
-# # # # # # # # # # # # # # # # # # # # # #
-#   EnderContainers english locale        #
-#   Version: 2.3.0-dev                    #
-#   An enderchests plugin by Utarwyn      #
-# # # # # # # # # # # # # # # # # # # # # #
+# # # # # # # # # # # # # # # # # # # # # # # #
+#   EnderContainers simplefied Chinese locale #
+#   Version: 2.3.0-dev                        #
+#   An enderchests plugin by Utarwyn          #
+# # # # # # # # # # # # # # # # # # # # # # # #
 
 ##                 ##
 #  Commands locale  #
