--- a/plugin/src/main/resources/locales/en.yml
+++ b/plugin/src/main/resources/locales/en.yml
@@ -38,7 +38,9 @@ menus:
 
   main_title: 'Enderchests of %player%'
   chest_title: 'Enderchest %num% of %player%'
-  pane_title: 'Enderchest %num% %counter%'
+
+  chest_item_accessible_title: '&aEnderchest %num% %counter%'
+  chest_item_inaccessible_title: '&cEnderchest %num%'
 
   chest_empty: '&2This enderchest is empty!'
   chest_full: '&cInventory full!'
